<resources>
    <string name="app_name">Health App</string>
    <string name="action_home">home</string>
    <string name="action_heart">heart</string>
    <string name="action_profile">profile</string>
    <string name="enter_field">Field Required</string>
    <string name="user_exits">Username already exits</string>
    <string name="password_legth">should be at least 8 characters</string>
    <string name="password_not_matching">Passwords do not match</string>
    <string name="question_text">What is your question?</string>
    <string name="give_your_post_a_title">Give your post a title</string>
    <string name="add_image">Optionally add image</string>
    <string name="privacy_tip">Privacy tip</string>
    <string name="write_your_post_here">About the community</string>
    <string name="create_post">Create post</string>
    <string name="mens_forum">In mens forum</string>
    <string name="women_forum">In womens forum</string>
    <string name="first_reply">Be the first on to comment</string>
    <string name="write_your_reply_here">Write your comment here</string>
    <string name="comment">Reply</string>
    <string name="repy_notification">Replied to your comment</string>
    <string name="comment_notification">Commented on your post</string>
    <string name="liked_your_post">Liked your post</string>
    <string name="started_following_you">Started following you</string>
    <string name="comment_reply">Replied to your comment</string>
    <string name="notifications">Notifications</string>
    <string name="community_title">Give your community a title</string>
    <string name="enroll_in_program">Join Community</string>
    <string name="warning_text">Content on this app does not replace the relationship between you and your doctors or other healthcare professionals
    not the advice you receive from them. \Never delay seeking advice or  dialling emergency services because of something that you have read here</string>
    <string name="about_this_program">About this program</string>
    <string name="enrolled">Enrolled</string>
    <string name="dialog_header">Which Community would you like to post to</string>
    <string name="my_communities">My Communities</string>
    <string name="view_all">View all</string>
    <string name="search">Search</string>
    <string name="all_communities">All Communities</string>
    <string name="search_community">Search for Community</string>
    <string name="post">Post</string>
    <string name="write">Write</string>
    <string name="please_select_communities_to_join">Please Select Communities to join</string>
    <string name="no_posts_yet">No Posts Yet</string>
    <string name="health_community">0J9PZ5R2BMJV5L740Z</string>
    <string name="company_name">Ren Technology</string>
    <string name="no_notifications">No notifications</string>
    <string name="username">username</string>
    <string name="admin">(admin)</string>
    <string name="delete">Delete</string>
    <string name="Agloia_application_id">DSXA6S4A7I</string>
    <string name="Admiin_api_key">1e2795c221606a221fe0f4c1012aa9c7</string>
    <string name="agolia_index_name">rentech</string>
    <string name="tip">Your health experiences have the potential to help others in a similar situation and transform lives. Because this may involve you sharing sensitive information, we encourage you to stay anonymous: \n\n -Don\'t share your real full name\n\n -Don\'t share your contact details\n\n -Don\'t share any other piece of information that could identify you.</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="admob_app_id">ca-app-pub-3577292392494352~8668093160</string>
    <string name="admob_samp_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_interstitial">ca-app-pub-3577292392494352/8160008460</string>
    <string name="admob_sample_interstitial">ca-app-pub-3940256099942544/2247696110</string>
    <string name="action_chats">Inbox</string>
    <string name="community_support">Community Support</string>
    <string name="administrator">Administrator</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_sign_in_with">Sign In with</string>
    <string name="lbl_forgot">Forgot ?</string>
    <string name="lbl_already_have_a_account">Already have a account?</string>
    <string name="lbl_enter_the_code_nto_verify_email">Enter the Code to Verify Your Email</string>
    <string name="lbl_we_have_sent_you_mail_with_verification_code_to">We have sent you mail with verification code to-</string>
    <string name="lbl_tep_email">rentech99@gmail.com</string>
    <string name="lbl_did_not_receive">Didn\'t receive?</string>
    <string name="lbl_resend_code">Resend code</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_hi_we_re_woobox">Hi, We\'re Treadaway!</string>
    <string name="lbl_subheading">We make around your city Affordable, easy and efficient.</string>
    <string name="lbl_my_order">Orders</string>
    <string name="lbl_reward">Reward</string>
    <string name="lbl_wish_list">Wishlist</string>
    <string name="lbl_women">Women</string>
    <string name="lbl_men">Men</string>
    <string name="lbl_kids">Kids</string>
    <string name="lbl_sports">Sports</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_faq">FAQ</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_contact_us">Contact us</string>
    <string name="lbl_newest_product">Newest Product</string>
    <string name="lbl_recent_search">Recent Product</string>
    <string name="lbl_top_selling">Top Selling</string>
    <string name="lbl_Featured">Featured Products</string>
    <string name="lbl_offers">Offers</string>
    <string name="lbl_deal">Deal</string>
    <string name="lbl_suggested">Suggested</string>
    <string name="lbl_you_may_like">You May Like</string>
    <string name="lbl_mens">Mens</string>
    <string name="lbl_womens">Womens</string>
    <string name="lbl_electronic">Electronic</string>
    <string name="lbl_optic">Optic</string>
    <string name="lbl_bags">Bags</string>
    <string name="lbl_1">1</string>
    <string name="lbl_add_to_cart">Add to Cart</string>
    <string name="lbl_buy_now">Buy Now</string>
    <string name="lbl_check_availability">Check Availability</string>
    <string name="lbl_delivery_by">Delivery By</string>
    <string name="lbl_free">Free</string>
    <string name="lbl_brand">Brand</string>
    <string name="lbl_colour">Colour</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_clouser">Clouser</string>
    <string name="lbl_lace_ups">Lace-ups</string>
    <string name="lbl_pattern">Pattern</string>
    <string name="lbl_rate_now">Rate Now</string>
    <string name="lbl_5">5</string>
    <string name="lbl_80">80</string>
    <string name="lbl_4">4</string>
    <string name="lbl_70">70</string>
    <string name="lbl_3">3</string>
    <string name="lbl_2">2</string>
    <string name="lbl_50">50</string>
    <string name="lbl_10">10</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_filter">Filters</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_more">More</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_select_all">Select All</string>
    <string name="lbl_colors">Colors</string>
    <string name="lbl_size">Size</string>
    <string name="lbl_discount">Discount</string>
    <string name="lbl_ratings">Ratings</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_less">Less</string>
    <string name="lbl_delivered_on">Delivered on</string>
    <string name="lbl_rated">Rated</string>
    <string name="lbl_payment_details">Payment Detail</string>
    <string name="lbl_item_price">Item Price -</string>
    <string name="lbl_offer">Offer -</string>
    <string name="lbl_shipping_charge">Shipping Charge -</string>
    <string name="lbl_total_amount">Total Amount -</string>
    <string name="lbl_payment_method">Payment Method -</string>
    <string name="lbl_shipping_details">Shipping Details</string>
    <string name="lbl_order_id">Order ID -</string>
    <string name="lbl_order_date">Order Date -</string>
    <string name="lbl_give_ratings">Give Rating</string>
    <string name="lbl_rate_5">/5</string>
    <string name="lbl_delivery_status">Your Ordered Item has been Delivered</string>
    <string name="lbl_return_replace"><![CDATA[Return & Replace]]></string>
    <string name="lbl_cancel_order">Cancel Order</string>
    <string name="lbl_see_return_policy">See Return Policy</string>
    <string name="lbl_track_item">Track Item</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_delivered_by">Delivery By,</string>
    <string name="lbl_change_address">Change Address</string>
    <string name="lbl_item_deliver_here">Item Deliver Here</string>
    <string name="lbl_add_new_address">Add New address</string>
    <string name="lbl_current_location">Use Current Location</string>
    <string name="lbl_save_address">Save Address</string>
    <string name="lbl_edit_address">Edit Address</string>
    <string name="lbl_add_address">Add New Address</string>
    <string name="lbl_home">Home Address</string>
    <string name="lbl_office_commercial">Work Address</string>
    <string name="lbl_add_card">Add Card</string>
    <string name="lbl_pay_with_debit_credit_card">Pay with PayPal</string>
    <string name="lbl_net_banking">Net Banking</string>
    <string name="lbl_cash_on_delivery">Cash on Delivery</string>
    <string name="lbl_other_wallet">Other Wallet</string>
    <string name="lbl_valid">Valid</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_change_qty">Change Quantity</string>
    <string name="lbl_new_arrival">New Arrival</string>
    <string name="lbl_popular">Popular</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="lbl_quick_pay_cards">Quick Pay Cards</string>
    <string name="lbl_my_offers">Special Offers</string>
    <string name="lbl_my_orders">My Orders</string>
    <string name="lbl_address_manager">Address Manager</string>
    <string name="lbl_verify_now">Verify now</string>
    <string name="lbl_get_newest_offers">Get newest offers</string>
    <string name="lbl_please_verify_your_email_or_number">Please verify your email or number</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_move_to_cart">Move to Cart</string>
    <string name="lbl_enable">Enable</string>
    <string name="lbl_invite_now">Invite Now</string>
    <string name="lbl_your_rewards">Your Rewards</string>
    <string name="lbl_cloths">Cloths</string>
    <string name="lbl_60">60</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_Accessories">Accessories</string>
    <string name="lbl_footwear">Footwear</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="action_search">Search</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_description">Description</string>
    <string name="health_app_warning">Content on the Health App does not replace the relationship between you and doctors or other healthcare professionals nor the advice you receive from them. Never delay seeking advice or dialing emergency services because something you have read on the Health App</string>
    <string name="hint_username">Username</string>
    <string name="community_image">Community Image</string>
</resources>