<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activity.PostQuestionActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/post_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/deltaRelative"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_5sdp">


            <EditText
                android:id="@+id/qestion_title_editext"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard_new"
                android:layout_marginTop="@dimen/spacing_standard_new"
                android:layout_marginEnd="@dimen/spacing_standard_new"
                android:background="@drawable/bg_ractangle_rounded_stroke"
                android:hint="@string/community_title"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/question_post_edit"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/qestion_title_editext"
                android:layout_marginStart="@dimen/spacing_standard_new"
                android:layout_marginTop="@dimen/spacing_standard_new"
                android:layout_marginEnd="@dimen/spacing_standard_new"
                android:background="@drawable/bg_ractangle_multiline"
                android:gravity="top"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:singleLine="true" />

            <TextView
                android:id="@+id/privacy_tip_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_post_edit"
                android:layout_marginStart="@dimen/spacing_standard_new"
                android:layout_marginTop="@dimen/spacing_standard_new"
                android:layout_marginEnd="@dimen/spacing_standard_new"

                android:fontFamily="@font/montserrat_regular"
                android:text="@string/privacy_tip"
                android:textColor="@color/link_text"
                android:textSize="@dimen/_13sdp" />


            <RelativeLayout
                android:id="@+id/add_iamge_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_tip_text"
                android:layout_marginTop="@dimen/_20sdp"

                android:padding="@dimen/_7sdp">

                <ImageView
                    android:id="@+id/addImage"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/spacing_standard_new"

                    android:layout_height="@dimen/_40sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_9sdp"
                    android:layout_toEndOf="@id/addImage"
                    android:text="@string/community_image"
                    android:textColor="@color/textColorPrimary" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/category_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_iamge_relative"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/gray_bottom_border"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressbar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:indeterminateDrawable="@drawable/circular_upload_progressbar"
                    android:visibility="gone" />
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/postbtn"
                style="@style/MaterialButtonStyle.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/category_linear"
                android:layout_marginStart="@dimen/spacing_standard_new"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:layout_marginEnd="@dimen/spacing_standard_new"
                android:shadowColor="@color/colorPrimary"
                android:text="@string/lbl_submit"
                android:textAppearance="@style/FontMedium" />
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/deltaRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />
    </RelativeLayout>


</RelativeLayout>